--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,8 @@
 
         <div>
             {% if user.is_authenticated %}
+                <a href="{% url 'alumnos:list' %}" class="btn btn-outline-light btn-sm">ALumnos</a>
+                <a href="{% url 'scraper:buscar' %}" class="btn btn-outline-light btn-sm">Scraper</a>
                 <a href="{% url 'users:dashboard' %}" class="btn btn-outline-light btn-sm">Dashboard</a>
                 <a href="{% url 'users:logout' %}" class="btn btn-outline-danger btn-sm ms-2">Logout</a>
             {% else %}
