--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,11 @@
 
 <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="#">Mi App</a>
+        <a class="navbar-brand" href="{% url 'users:home' %}">Mi App</a>
 
         <div>
             {% if user.is_authenticated %}
-                <a href="{% url 'alumnos:list' %}" class="btn btn-outline-light btn-sm">ALumnos</a>
+                <a href="{% url 'alumnos:list' %}" class="btn btn-outline-light btn-sm">Alumnos</a>
                 <a href="{% url 'scraper:buscar' %}" class="btn btn-outline-light btn-sm">Scraper</a>
                 <a href="{% url 'users:dashboard' %}" class="btn btn-outline-light btn-sm">Dashboard</a>
                 <a href="{% url 'users:logout' %}" class="btn btn-outline-danger btn-sm ms-2">Logout</a>
