--- a/scraper/templates/scraper/resultado.html
+++ b/scraper/templates/scraper/resultado.html
@@ -18,7 +18,7 @@
         </tbody>
     </table>
 
-    <a href="{% url 'scraper:enviar_email' %}" class="btn btn-primary">
+    <a href="{% url 'scraper:enviar_mail' %}" class="btn btn-primary">
         Enviar por correo
     </a>
 
